@@ -22,6 +22,9 @@ class RemoteNmiTest < Test::Unit::TestCase
       :billing_address => address,
       :description => 'Store purchase'
     }
+    @level3_options = {
+       tax: 5.25, shipping: 10.51, ponumber: 1002
+    }
   end
 
   def test_invalid_login
@@ -32,7 +35,9 @@ class RemoteNmiTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase
-    assert response = @gateway.purchase(@amount, @credit_card, @options)
+    options = @options.merge(@level3_options)
+
+    assert response = @gateway.purchase(@amount, @credit_card, options)
     assert_success response
     assert response.test?
     assert_equal 'Succeeded', response.message
@@ -100,7 +105,9 @@ class RemoteNmiTest < Test::Unit::TestCase
   end
 
   def test_successful_authorization
-    assert response = @gateway.authorize(@amount, @credit_card, @options)
+    options = @options.merge(@level3_options)
+
+    assert response = @gateway.authorize(@amount, @credit_card, options)
     assert_success response
     assert_equal 'Succeeded', response.message
     assert response.authorization
@@ -174,7 +181,9 @@ class RemoteNmiTest < Test::Unit::TestCase
   end
 
   def test_successful_credit
-    response = @gateway.credit(@amount, @credit_card, @options)
+    options = @options.merge(@level3_options)
+
+    response = @gateway.credit(@amount, @credit_card, options)
     assert_success response
     assert_equal 'Succeeded', response.message
   end
@@ -186,7 +195,9 @@ class RemoteNmiTest < Test::Unit::TestCase
   end
 
   def test_successful_verify
-    response = @gateway.verify(@credit_card, @options)
+    options = @options.merge(@level3_options)
+
+    response = @gateway.verify(@credit_card, options)
     assert_success response
     assert_match 'Succeeded', response.message
   end
